@@ -1,0 +1,7 @@
+{
+  "variants": {
+    "": {
+      "model": "relativedimensions:block/aberrant_grass"
+    }
+  }
+}
