@@ -1,5 +1,5 @@
 {
-  "feature": "relativedimensions:ow_aberrant_tree",
+  "feature": "relativedimensions:aberrant_tree_config",
   "placement": [
     {
       "type": "minecraft:count",
