@@ -81,6 +81,16 @@
   "item.relativedimensions.aberrant_stick" : "Aberrant stick",
   "item.relativedimensions.aberrant_stick_tooltip" : "Stick made from wood with strange properties. It is the only kind of wood that can hold the energy of aberrant minerals without deteriorating",
 
+  "item.relativedimensions.aberrant_shovel" : "Aberrant shovel",
+  "item.relativedimensions.aberrant_shovel.tooltip" : "A shovel that can dig through the fabric of reality itself.\n",
+  "block.relativedimensions.aberrant_grass" : "Aberrant grass ",
+  "item.relativedimensions.aberrant_grass.tooltip" : "Dirt with grass that was altered due to dimensional spillages.",
+  "block.relativedimensions.aberrant_dirt" : "Aberrant dirt",
+  "item.relativedimensions.aberrant_dirt.tooltip" : "Dirt that was altered due to dimensional spillages.",
+  "block.relativedimensions.aberrant_snowy_grass" : "Aberrant snowy grass",
+  "item.relativedimensions.aberrant_snowy_grass.tooltip" : "Dirt with snow on top. Instead of melting, the snow seems to be absorbed by the dirt due to the radiation inside the block.",
+
+
   "advancements.relativedimensions.aberrant_root.title" : "Reality glitch hunter",
   "advancements.relativedimensions.aberrant_root.toast" : "You just found something that shouldn't be there",
   "advancements.relativedimensions.aberrant_tool.title" : "Cracking reality itself",
